[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netscan"
version = "1.0.1"
description = "A simple network scanner"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Etienne Jannin", email = "etienne.jannin@gmail.com"},
]
requires-python = ">=3.8"
keywords = ["network", "scanner", "ping", "port-scan", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]

dependencies = [
    "rich>=10.0.0",
    "netifaces>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/CodeEtienne/netscan"
Repository = "https://github.com/CodeEtienne/netscan.git"
Issues = "https://github.com/CodeEtienne/netscan/issues"

[project.scripts]
netscan = "netscan.cli:main"

[tool.setuptools]
packages = ["netscan"]

[tool.setuptools.package-data]
netscan = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
